Commit before setting up CI

--- a/polling/templates/polling/detail.html
+++ b/polling/templates/polling/detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>{{ poll.title }}</h1>
 <div class="poll-body">
-    {{ poll.text }}
+    {{ object.text }}
 </div>
 <div class="poll-score">
     Current score: {{ poll.score }}
