New title for base.html

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Django Blog</title>
+        <title>Luis's Django Page</title>
         <link type="text/css" rel="stylesheet" href="{% static 'django_blog.css' %}">
     </head>
     <body>
